--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Square Distortion</title>
     <style>
         body {
@@ -13,9 +13,14 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
+            touch-action: none;
+            position: fixed;
+            width: 100%;
+            height: 100%;
         }
         canvas {
             display: block;
+            touch-action: none;
         }
     </style>
 </head>
