--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <script src="script.js"></script>
+    <script src="script.js?v=1"></script>
 </body>
 </html>
